--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,8 @@
 profile-name=test
+
+#mail
+spring.mail.host=localhost
+spring.mail.port=2525
+spring.mail.username=user
+spring.mail.password=Reset@123
+
