--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
-spring.profiles.active=dev,test
+spring.profiles.active=dev
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/ebms
 spring.datasource.username=root
 spring.datasource.password=admin
 
+#show sql queries
 spring.jpa.show-sql=true
+
+# TRACE will show the values in the sql query
+logging.level.org.hibernate.type=trace
+
+logging.level.org.springframework=INFO
+
+#mail
+spring.mail.host=exchange.stg.com
+spring.mail.port=25
+spring.mail.username=forums@stgit.com
+spring.mail.password=Reset123
+#spring.mail.properties.auth=true
